--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
-    "devDependencies": {
-        "axios": "^0.18",
-        "cross-env": "^5.1",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.5"
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "5.2.0",
+        "axios": "^0.18.0",
+        "bootstrap": "^4.1.3",
+        "cross-env": "^5.2.0",
+        "icheck-bootstrap": "^3.0.1",
+        "jquery": "3.3.1",
+        "laravel-mix": "^2.1.14",
+        "list.js": "1.5.0",
+        "lodash": "^4.17.10",
+        "popper.js": "1.14.4",
+        "select2": "^4.0.6-rc.1",
+        "sweetalert": "^2.1.0",
+        "toastr": "^2.1.4"
     }
 }
